# ClawDev

./: .env.template  .gitignore  .stignore  AGENTS.md  Dockerfile  Dockerfile.sandbox  LICENSE  README.md  blog.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.stfolder/: syncthing-folder-0b7e96.txt
configs/default/: ChatChainConfig.json  PhaseConfig.json
configs/default/Chief_Creative_Officer/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Chief_Executive_Officer/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Chief_Human_Resource_Officer/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Chief_Product_Officer/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Chief_Technology_Officer/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Code_Reviewer/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Counselor/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Programmer/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
configs/default/Software_Test_Engineer/: AGENTS.md  IDENTITY.md  SOUL.md  (+2 more)
examples/: README.md  clawdev_example.py
scripts/: create_agents.py  create_agents.sh  deploy.sh  deploy_agent_configs.sh  deploy_agent_credentials.sh  generate_agent_configs.sh  tea-wrapper
src/: main.py  repl.py
src/clawdev/: __init__.py
src/openclaw_acp/: __init__.py  agent.py  utils.py
tests/: test_agent.py  test_agent_routing.py  test_clawdev.py  test_clawdev_workflow.py  test_utils.py
(+23 files in other folders)
