[project]
name = "clawdev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipython>=9.11.0",
    "ruff>=0.15.6",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
